--- a/ExploreCalifornia/Views/Blog/Create.cshtml
+++ b/ExploreCalifornia/Views/Blog/Create.cshtml
@@ -1,7 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
+﻿@addTagHelper "*, Microsoft.AspNetCore.Mvc.TagHelpers"
 @model ExploreCalifornia.Models.Post
 @{
     Layout = "_Layout";
