--- a/ExploreCalifornia/Views/Blog/Index.cshtml
+++ b/ExploreCalifornia/Views/Blog/Index.cshtml
@@ -1,8 +1,9 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model IEnumerable<ExploreCalifornia.Models.Post>
 @{
+    Layout = "_Layout";
 }
+
+<h1>Explorer's Blog</h1>
 
 <p>Below are a few of the latest posts from some of our explorers.</p>
 
