--- a/ExploreCalifornia/Views/Blog/Post.cshtml
+++ b/ExploreCalifornia/Views/Blog/Post.cshtml
@@ -1,7 +1,4 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@model ExploreCalifornia.Models.Post
+﻿@model ExploreCalifornia.Models.Post
 @{
     Layout = "_Layout";
 }
