--- a/ExploreCalifornia/Views/Shared/_Layout.cshtml
+++ b/ExploreCalifornia/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                         <a href="explorers.htm" title="Our community">Explorers <br /><span class="tagline">join our community</span></a>
                         <ul>
                             <li><a href="explorers/join.htm" title="join our community">Join the Explorers</a></li>
-                            <li><a href="@Url.Action("Index", "Blog") title="Read our Blog!">Read our blog</a> </li>
+                            <li><a href="@Url.Action("Index", "Blog")" title="Read our Blog!">Read our blog</a></li>
                             <li>@Html.ActionLink("Read our blog", "Index", "Blog", null, new { title = "Read our blog!"})</li>
                             <li><a href="/blog" title="read our blog!">Read our Blog</a></li>
                             <li><a href="explorers/gallery.htm" title="contributor photos">Tour Photos</a></li>
