--- a/ExploreCalifornia/Views/Blog/Create.cshtml
+++ b/ExploreCalifornia/Views/Blog/Create.cshtml
@@ -5,26 +5,29 @@
 }
 
 <h1>Create Blog Post</h1>
-<fieldset>
 
+<fieldset>
 
     <form asp-action="Create" asp-controller="Blog">
 
-        <div asp-validation-summary="All" class="input-validation-error"></div>
+        <div asp-validation-summary="ModelOnly" class="input-validation-error"></div>
+
         <p>
             <label asp-for="Title"></label>
             <input asp-for="Title" class="form-control" placeholder="Blog post title" />
             <span asp-validation-for="Title"></span>
-           
         </p>
+
         <p>
             <label asp-for="Body"></label>
             <textarea asp-for="Body" class="form-control" placeholder="Blog post content"></textarea>
             <span asp-validation-for="Body"></span>
         </p>
+
         <p>
             <button type="submit">Create Post</button>
         </p>
+
     </form>
 
 </fieldset>
