--- a/ExploreCalifornia/Views/Blog/Index.cshtml
+++ b/ExploreCalifornia/Views/Blog/Index.cshtml
@@ -5,12 +5,13 @@
 
 <h1>Explorer's Blog</h1>
 
-<p>Below are a few of the latest posts from some of our explorers.</p>
+<p>
+    Below are a few of the latest posts from some of our explorers.
+</p>
 
 <div class="blog-posts">
     @foreach (var post in Model)
     {
-        @await Html.PartialAsync("_Post", post);
+        @await Html.PartialAsync("_Post", post)
     }
-
 </div>
